--- a/index.htm
+++ b/index.htm
@@ -8,5 +8,17 @@
   
   <body>
     <h1>notam.dev</h1>
+    
+    <h2>iPhone:</h2>
+    <ul>
+      <li>Inställningar</li>
+      <li>Kalender</li>
+      <li>Konton</li>
+      <li>Lägg till konto</li>
+      <li>Annat</li>
+      <li>Lägg till prenumererad kalender</li>
+      <li>s3.notam.dev/esnq.ics</li>
+      <li>eller s3.notam.dev/esnz.ics</li>
+    </ul>
   </body>
 </html>
